// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getPaginationWindow should create a window with ellipses 1`] = `
[
  {
    "direction": "previous",
    "isDisabled": false,
    "key": "navigation-previous",
    "number": 4,
    "offset": 30,
    "type": "navigation",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-1",
    "number": 1,
    "offset": 0,
    "type": "page",
  },
  {
    "isDisabled": true,
    "key": "ellipsis-front",
    "type": "ellipsis",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-3",
    "number": 3,
    "offset": 20,
    "type": "page",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-4",
    "number": 4,
    "offset": 30,
    "type": "page",
  },
  {
    "isCurrent": true,
    "isDisabled": false,
    "key": "page-5",
    "number": 5,
    "offset": 40,
    "type": "page",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-6",
    "number": 6,
    "offset": 50,
    "type": "page",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-7",
    "number": 7,
    "offset": 60,
    "type": "page",
  },
  {
    "isDisabled": true,
    "key": "ellipsis-back",
    "type": "ellipsis",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-9",
    "number": 9,
    "offset": 80,
    "type": "page",
  },
  {
    "direction": "next",
    "isDisabled": false,
    "key": "navigation-next",
    "number": 6,
    "offset": 50,
    "type": "navigation",
  },
]
`;

exports[`getPaginationWindow should create a window without ellipses 1`] = `
[
  {
    "direction": "previous",
    "isDisabled": false,
    "key": "navigation-previous",
    "number": 4,
    "offset": 30,
    "type": "navigation",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-1",
    "number": 1,
    "offset": 0,
    "type": "page",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-2",
    "number": 2,
    "offset": 10,
    "type": "page",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-3",
    "number": 3,
    "offset": 20,
    "type": "page",
  },
  {
    "isCurrent": false,
    "isDisabled": false,
    "key": "page-4",
    "number": 4,
    "offset": 30,
    "type": "page",
  },
  {
    "isCurrent": true,
    "isDisabled": false,
    "key": "page-5",
    "number": 5,
    "offset": 40,
    "type": "page",
  },
  {
    "direction": "next",
    "isDisabled": true,
    "key": "navigation-next",
    "number": 5,
    "offset": 40,
    "type": "navigation",
  },
]
`;
